RESOLVED FIXED202093
FrameSpecificStorageAccessIdentifier does not need a sessionID
https://bugs.webkit.org/show_bug.cgi?id=202093
Summary FrameSpecificStorageAccessIdentifier does not need a sessionID
Chris Dumez
Reported 2019-09-22 18:58:26 PDT
FrameSpecificStorageAccessIdentifier does not need a sessionID.
Attachments
Patch (3.32 KB, patch)
2019-09-22 18:59 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-09-22 18:59:00 PDT
Chris Dumez
Comment 2 2019-09-23 18:41:10 PDT
Ping review?
Geoffrey Garen
Comment 3 2019-09-23 20:40:50 PDT
Comment on attachment 379350 [details] Patch r=me io-wk2 EWS failure does not seem related
WebKit Commit Bot
Comment 4 2019-09-23 21:26:35 PDT
Comment on attachment 379350 [details] Patch Clearing flags on attachment: 379350 Committed r250280: <https://trac.webkit.org/changeset/250280>
WebKit Commit Bot
Comment 5 2019-09-23 21:26:37 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2019-09-23 21:27:17 PDT
Note You need to log in before you can comment on or make changes to this bug.