FrameSpecificStorageAccessIdentifier does not need a sessionID https://bugs.webkit.org/show_bug.cgi?id=202093

Reviewed by Geoffrey Garen.

* WebProcess/WebCoreSupport/WebFrameLoaderClient.h:
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::requestStorageAccess):


Canonical link: https://commits.webkit.org/215734@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250280 268f45cc-cd09-0410-ab3c-d52691b4dbfc